# openflow

./: .env.example  .gitignore  README.md  config.ini  main.py  prompts.yaml  pyproject.toml
bot/: __init__.py  api.py  config.py  engine.py  models.py  store.py  tooling.py
bot/nodes/: __init__.py  agent.py  base.py  builtin.py
examples/: hello_workflow.json  multi_agent_workflow.json  visual_agent_workflow.json
ui/: index.html  package-lock.json  package.json
ui/src/: App.tsx  main.tsx  styles.css
